// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TreeItem /> should render appropriate configuration "{"labelText":"","selected":false,"expandable":false}" 1`] = `
<div>
  <li
    class="tm-tree-item"
    role="treeitem"
  >
    <label
      aria-selected="false"
      class="tm-tree-item-inner"
    >
      <input
        type="radio"
        value=""
      />
    </label>
    Item
  </li>
</div>
`;

exports[`<TreeItem /> should render appropriate configuration "{"labelText":"Label 1","selected":false,"expandable":false}" 1`] = `
<div>
  <li
    class="tm-tree-item"
    role="treeitem"
  >
    <label
      aria-selected="false"
      class="tm-tree-item-inner"
    >
      <input
        type="radio"
        value=""
      />
      Label 1
    </label>
    Item
  </li>
</div>
`;

exports[`<TreeItem /> should render appropriate configuration "{"labelText":"Label","selected":false,"expandable":true}" 1`] = `
<div>
  <li
    class="tm-tree-item expandable"
    role="treeitem"
  >
    <label
      aria-selected="false"
      class="tm-tree-item-inner"
    >
      <input
        type="radio"
        value=""
      />
      <div
        class="tm-tree-item-expand-btn"
        data-mocked="Button"
        iconname="treeview-expand"
        variant="inline-icon"
      />
      Label
    </label>
  </li>
</div>
`;

exports[`<TreeItem /> should render appropriate configuration "{"labelText":"Label","selected":true,"expandable":false}" 1`] = `
<div>
  <li
    class="tm-tree-item"
    role="treeitem"
  >
    <label
      aria-selected="true"
      class="tm-tree-item-inner selected"
    >
      <input
        checked=""
        type="radio"
        value=""
      />
      Label
    </label>
    Item
  </li>
</div>
`;

exports[`<TreeItem /> should render appropriate configuration "{"labelText":"Label","selected":true,"expandable":true}" 1`] = `
<div>
  <li
    class="tm-tree-item expandable"
    role="treeitem"
  >
    <label
      aria-selected="true"
      class="tm-tree-item-inner selected"
    >
      <input
        checked=""
        type="radio"
        value=""
      />
      <div
        class="tm-tree-item-expand-btn"
        data-mocked="Button"
        iconname="treeview-expand"
        variant="inline-icon"
      />
      Label
    </label>
  </li>
</div>
`;

exports[`<TreeItem /> should render appropriate configuration "{"labelText":{"type":"span","key":null,"ref":null,"props":{"children":"Label"},"_owner":null,"_store":{}},"selected":false,"expandable":false}" 1`] = `
<div>
  <li
    class="tm-tree-item"
    role="treeitem"
  >
    <label
      aria-selected="false"
      class="tm-tree-item-inner"
    >
      <input
        type="radio"
        value=""
      />
      <span>
        Label
      </span>
    </label>
    Item
  </li>
</div>
`;

exports[`<TreeItem /> should render appropriate configuration "{"labelText":null,"selected":false,"expandable":false}" 1`] = `
<div>
  <li
    class="tm-tree-item"
    role="treeitem"
  >
    <label
      aria-selected="false"
      class="tm-tree-item-inner"
    >
      <input
        type="radio"
        value=""
      />
    </label>
    Item
  </li>
</div>
`;
